# sdl-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h  test.cpp
cmake/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
docs/: _config.yml  index.md
docs/_layouts/: home.html
include/sge/: actionmgr.hpp  audiomgr.hpp  config.hpp  engine-forward.hpp  engine.hpp  error.hpp  init.hpp  mainloop.hpp  node-forward.hpp  node.hpp  nodemgr.hpp  renderer.hpp  scenemgr-forward.hpp  scenemgr.hpp  sge.hpp  timer.hpp
include/sge/assets/: asset.hpp  cache.hpp  loader-forward.hpp  loader.hpp  locator.hpp  manager.hpp
include/sge/assets/loaders/: audio.hpp  font.hpp  image.hpp  json.hpp  tileset.hpp
include/sge/assets/locators/: file.hpp
include/sge/initializers/: sdl-fonts.hpp  sdl-image.hpp  sdl-mixer.hpp  sdl-window.hpp  sdl.hpp
include/sge/nodes/: animatedsprite.cpp  animatedsprite.hpp  body.hpp  boundingbox.hpp  canvas.hpp  collisionshape.hpp  label.hpp  position.hpp  sprite.hpp  tilemap.hpp
include/sge/physics/: manager.hpp  manifold.hpp  shape.hpp  vector.hpp
include/sge/utils/: callback.hpp  matrix.hpp  shape.hpp  vector.hpp
rsrc/: map.json  spritesheet-info.json
src/: actionmgr.cpp  audiomgr.cpp  config.cpp  engine.cpp  init.cpp  mainloop.cpp  node.cpp  nodemgr.cpp  renderer.cpp  scenemgr.cpp
src/assets/: asset.cpp  manager.cpp
src/assets/loaders/: audio.cpp  font.cpp  image.cpp  json.cpp  tileset.cpp
src/assets/locators/: file.cpp
src/initializers/: sdl-fonts.cpp  sdl-image.cpp  sdl-mixer.cpp  sdl-window.cpp  sdl.cpp
src/nodes/: animatedsprite.cpp  body.cpp  boundingbox.cpp  canvas.cpp  collisionshape.cpp  label.cpp  position.cpp  sprite.cpp  tilemap.cpp
src/physics/: manager.cpp  shape.cpp
src/utils/: shape.cpp  vector.cpp
